# Geosim-RTX

./: .clang-format  .gitignore  CMakeLists.txt  Design.txt  README.md  readme.md
src/: Camera.cpp  Camera.h  Image.cpp  Image.h  PCH.h  Primitive.cpp  Primitive.h  Ray.h  Renderer.cpp  Renderer.h  Rotor.cpp  Rotor.h  Scene.cpp  Scene.h  Settings.h  cuda_playground.cu  cuda_playground.h  cuda_scenes.h  gpu.cu  gpu.h  gpu_sdf.h  main.cpp  render_settings.h
src/util/: CUDAMath.cu  CUDAMath.h  Color.h  Math.cpp  Math.h  Ray.h  Window.cpp  Window.h
